@@ -45,6 +45,7 @@ if { ![istarget hppa*64*-*-hpux*] \
      && ![istarget mips*-*-linux*] \
      && ![istarget alpha*-*-linux*] \
      && ![istarget s390*-*-linux*] \
+     && ![istarget sh\[34\]*-*-linux*] \
      && ![istarget x86_64-*-linux*] } {
     return
 }
