@@ -25,7 +25,9 @@ if ![isnative] then {return}
 # This test can only be run on a couple of ELF platforms.
 # Square bracket expressions seem to confuse istarget.
 # This is similar to the test that is used in ld-shared, BTW.
-if { ![istarget hppa*64*-*-hpux*] \
+if {    ![istarget alpha*-*-linux*] } {
+     && ![istarget arm*-*-linux*] \
+     && ![istarget hppa*64*-*-hpux*] \	    
      && ![istarget hppa*-*-linux*] \
      && ![istarget i?86-*-sysv4*] \
      && ![istarget i?86-*-unixware] \
@@ -35,15 +37,14 @@ if { ![istarget hppa*64*-*-hpux*] \
      && ![istarget ia64-*-linux*] \
      && ![istarget m68k-*-linux*] \
      && ![istarget mips*-*-irix5*] \
+     && ![istarget mips*-*-linux*] \
      && ![istarget powerpc-*-elf*] \
      && ![istarget powerpc-*-linux*] \
      && ![istarget powerpc-*-sysv4*] \
+     && ![istarget sh\[34\]*-*-linux*] \
      && ![istarget sparc*-*-elf] \
      && ![istarget sparc*-*-solaris2*] \
-     && ![istarget sparc*-*-linux*] \
-     && ![istarget arm*-*-linux*] \
-     && ![istarget mips*-*-linux*] \
-     && ![istarget alpha*-*-linux*] } {
+     && ![istarget sparc*-*-linux*] } {
     return
 }
 
